--- a/.env
+++ b/.env
@@ -44,6 +44,8 @@ NOTIFICATION_EMAIL=aquacarelaundry@gmail.com
 
 
 MAIL_MAILER=smtp
+QUEUE_CONNECTION=database
+
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
 MAIL_USERNAME=aquacarelaundry@gmail.com
