--- a/.env
+++ b/.env
@@ -49,7 +49,7 @@ QUEUE_CONNECTION=database
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
 MAIL_USERNAME=aquacarelaundry@gmail.com
-MAIL_PASSWORD="vqse tulp ihcj vqeu"
+MAIL_PASSWORD="kktp qtnq ixas pfdk"
 MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS=aquacarelaundry@gmail.com
 MAIL_FROM_NAME="Aqua Care Laundry"
